--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@nuxtjs/supabase": "^1.0.2",
     "@types/node": "^18.17.3",
     "nuxt": "^3.6.5"
+  },
+  "dependencies": {
+    "@vueuse/nuxt": "^10.3.0"
   }
 }
